vpc.tf
resource "aws_vpc" "gameday_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "gameday_vpc"
  }
}
